Доработки согласно замечаниям. Часть 2. Корректировка по методам кэширования.