@@ -1,7 +1,6 @@
 package com.todo.service.impl;
 
 import com.todo.dto.TodoDto;
-import com.todo.entity.PublicHoliday;
 import com.todo.entity.StatusTodo;
 import com.todo.entity.Todo;
 import com.todo.exception.ForbiddenDate;
@@ -10,26 +9,18 @@ import com.todo.repository.TodoRepository;
 import com.todo.service.TodoService;
 import com.todo.utils.ValidateDate;
 import org.modelmapper.ModelMapper;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.time.DayOfWeek;
 import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
-import java.util.*;
-import java.util.stream.Collectors;
-
-
-import org.springframework.web.client.RestTemplate;
-import com.google.gson.*;
+import java.util.List;
 
 @Service
 public class TodoServiceImpl implements TodoService {
 
+    private static final String ID_NOT_FOUNT_MESSAGE = "Нет записи с id - ";
     private ModelMapper modelMapper;
     private TodoRepository todoRepository;
 
@@ -42,7 +33,6 @@ public class TodoServiceImpl implements TodoService {
     public TodoDto addTodo(TodoDto todoDto) throws ForbiddenDate {
 
         todoDto.setStatus(StatusTodo.NOT_COMPLETED);
-        //Заполним массив праздников;
         LocalDate date = todoDto.getEstimatedOn();
         ValidateDate.getHolidayJSON(date.getYear());
 
@@ -52,18 +42,17 @@ public class TodoServiceImpl implements TodoService {
         }
 
         if (ValidateDate.isHoliday(date)) {
-            throw new ForbiddenDate("В праздники и выходные нельзя назначать дату выполнения " + tempDate);
+            throw new ForbiddenDate("В праздники и выходные нельзя назначать дату выполнения, следующая дата на которую можно назначить: " + tempDate);
         }
         Todo todo = modelMapper.map(todoDto, Todo.class);
         Todo savedTodo = todoRepository.save(todo);
-        TodoDto savedTodoDto = modelMapper.map(savedTodo, TodoDto.class);
-        return savedTodoDto;
+        return modelMapper.map(savedTodo, TodoDto.class);
     }
 
     @Override
     public TodoDto getTodo(Long id) {
 
-        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException("Нет записи с id - " + id));
+        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException(ID_NOT_FOUNT_MESSAGE + id));
         return modelMapper.map(todo, TodoDto.class);
         
     }
@@ -71,14 +60,13 @@ public class TodoServiceImpl implements TodoService {
     @Override
     public List<TodoDto> getAllTodos() {
         List<Todo> todos = todoRepository.findAll();
-        return todos.stream().map((todo)->modelMapper.map(todo, TodoDto.class))
-                .collect(Collectors.toList());
+        return todos.stream().map((todo)->modelMapper.map(todo, TodoDto.class)).toList();
     }
 
     @Override
     public TodoDto updateTodo(TodoDto todoDto, Long id) {
         Todo todo = todoRepository.findById(id)
-                .orElseThrow(() -> new TodoNotFoundException("Нет записи с id - " + id));
+                .orElseThrow(() -> new TodoNotFoundException(ID_NOT_FOUNT_MESSAGE + id));
 
         todo.setTitle(todoDto.getTitle());
         todo.setDescription(todoDto.getDescription());
@@ -91,13 +79,13 @@ public class TodoServiceImpl implements TodoService {
 
     @Override
     public void deleteTodo(Long id) {
-        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException("Нет записи с id - " + id));
+        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException(ID_NOT_FOUNT_MESSAGE + id));
         todoRepository.deleteById(todo.getId());
     }
 
     @Override
     public TodoDto completeTodo(Long id) {
-        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException("Нет записи с id - " + id));
+        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException(ID_NOT_FOUNT_MESSAGE + id));
         todo.setStatus(StatusTodo.COMPLETED);
 
         Todo updatedTodo = todoRepository.save(todo);
@@ -106,7 +94,7 @@ public class TodoServiceImpl implements TodoService {
 
     @Override
     public TodoDto inCompleteTodo(Long id) {
-        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException("Нет записи с id - " + id));
+        Todo todo = todoRepository.findById(id).orElseThrow(()-> new TodoNotFoundException(ID_NOT_FOUNT_MESSAGE + id));
 
         todo.setStatus(StatusTodo.NOT_COMPLETED);
         Todo updatedTodo = todoRepository.save(todo);
@@ -122,20 +110,16 @@ public class TodoServiceImpl implements TodoService {
 
     @Override
     public Page<TodoDto> getTodosPaginationWithFilter(Integer pageNumber, Integer pageSize, String status) {
+
         Pageable pageable = PageRequest.of(pageNumber, pageSize);
         Page<Todo> todos;
-        if (status != null && (status.equals("not_completed") || status.equals("completed"))) {
-            StatusTodo statusTodo = null;
-            if (status.equals("completed")) statusTodo = StatusTodo.COMPLETED;
-            else {
-                statusTodo = StatusTodo.NOT_COMPLETED;
-            }
-            todos = todoRepository.findTodoByStatus(statusTodo, pageable);
-        }
-        else {
-            todos = todoRepository.findAll(pageable);
-        }
 
+        StatusTodo statusTodo = null;
+        if (status.equals("completed")) statusTodo = StatusTodo.COMPLETED;
+        else {
+            statusTodo = StatusTodo.NOT_COMPLETED;
+        }
+        todos = todoRepository.findTodoByStatus(statusTodo, pageable);
         return todos.map(todo -> modelMapper.map(todo, TodoDto.class));
     }
 
